kubernetes/games/minecraft.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minecraft
  labels:
    app: minecraft
spec:
  replicas: 1
  serviceName: "minecraft"
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
        - name: minecraft
          image: enigodupont/papermc:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 25565
            - containerPort: 8123
            - containerPort: 19132
          volumeMounts:
            - mountPath: "/papermc"
              name: minecraft-data
          resources:
            requests:
              memory: "4Gi"
              cpu: 2 
            limits:
              memory: "5Gi"
              cpu: 2
  volumeClaimTemplates:
  - metadata:
      name: minecraft-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "nfs-client"
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft
spec:
  selector:
    app: minecraft
  ports:
    - name: mc-port
      protocol: TCP
      port: 25565
      targetPort: 25565
      nodePort: 32556
    - name: mc-geyser-port
      protocol: UDP
      port: 19132
      targetPort: 19132 
      nodePort: 31329 
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-ui
spec:
  selector:
    app: minecraft
  ports:
    - name: ui-port
      protocol: TCP
      port: 8123
      targetPort: 8123
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minecraft-ui
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`minecraft.eniworks.net`)
    kind: Rule
    services:
    - name: minecraft-ui
      port: 8123
      passHostHeader: true
